Started coding the layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Dina Olufsen's portfolio page, showcasing some of her work.">
+    <title>Portfolio: Dina Olufsen</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <div class="content">
+            <h1>Dina Olufsen's Portfolio</h1>
+            <section class="profile">
+                <div class="img-container">
+                    <img src="/images/portrait.jpg">
+                </div>
+                <div class="profile-text">
+                    <h2>Dina Olufsen</h2>
+                    <ul>
+                        <li>Becoming a Frontend Developer</li>
+                        <li>Loves Design</li>
+                        <li>Used to work with children</li>
+                        <li>Loves to learn new stuff</li>
+                    </ul>
+                    <div>
+                        <span>Contact me: </span>
+                        <a href="https://www.linkedin.com/in/dina-olufsen-42922721a/"><img src="/images/linkedin-logo.png" alt="Portrait of Dina Olufsen."></a>
+                    </div>
+                </div>
+            </section>
+            <section class="works">
+                <h2>Works</h2>
+                <div>
+                    <div>
+                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website for Community Science Museum"></a>
+                        <div>
+                            <h3>Community Science Museum</h3>
+                            <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
+                            <ul>
+                                <li>Made with HTML and CSS</li>
+                                <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
+                                <li><a href="https://thecommunityscience.netlify.app/">Visit website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website for Community Science Museum"></a>
+                        <div>
+                            <h3>Community Science Museum</h3>
+                            <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
+                            <ul>
+                                <li>Made with HTML and CSS</li>
+                                <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
+                                <li><a href="https://thecommunityscience.netlify.app/">Visit website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website for Community Science Museum"></a>
+                        <div>
+                            <h3>Community Science Museum</h3>
+                            <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
+                            <ul>
+                                <li>Made with HTML and CSS</li>
+                                <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
+                                <li><a href="https://thecommunityscience.netlify.app/">Visit website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="circle circle-1"><div></div></div>
+            <div class="circle circle-2"><div></div></div>
+        </div>
+    </main>
+    <footer>
+        <div>© Dina Olufsen - 2022</div>
+    </footer>
 </body>
 </html>
