Continued building the website

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </section>
             <section class="works">
                 <h2>Works</h2>
-                <div>
-                    <div>
-                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website for Community Science Museum"></a>
-                        <div>
+                <div class="works-wrap">
+                    <div class="project-card">
+                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website; Community Science Museum"></a>
+                        <div class="card-text">
                             <h3>Community Science Museum</h3>
                             <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
                             <ul>
@@ -46,27 +46,27 @@
                             </ul>
                         </div>
                     </div>
-                    <div>
-                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website for Community Science Museum"></a>
-                        <div>
-                            <h3>Community Science Museum</h3>
-                            <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
+                    <div class="project-card">
+                        <a href="https://dina-school.netlify.app/"><img src="./images/game-hub.jpg" alt="Screenshot of the website; Game Hub"></a>
+                        <div class="card-text">
+                            <h3>Game Hub</h3>
+                            <p>A gaming website for people to buy video games, sell old copies and pre-purchase upcoming games.</p>
                             <ul>
-                                <li>Made with HTML and CSS</li>
-                                <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
-                                <li><a href="https://thecommunityscience.netlify.app/">Visit website</a></li>
+                                <li>Made with HTML, CSS and JavaScript - connected to WordPress API</li>
+                                <li><a href="https://github.com/Noroff-FEU-Assignments/cross-course-project-DinaOluf">GitHub Repository</a></li>
+                                <li><a href="https://dina-school.netlify.app/">Visit website</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div>
-                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website for Community Science Museum"></a>
-                        <div>
-                            <h3>Community Science Museum</h3>
-                            <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
+                    <div class="project-card">
+                        <a href="https://todaysfoodblog.netlify.app/"><img src="./images/todays-food-blog.jpg" alt="Screenshot of the website; Today's Food Blog"></a>
+                        <div class="card-text">
+                            <h3>Today's Food Blog</h3>
+                            <p>A food blog for a content creator to post about their food making and experiences with food.</p>
                             <ul>
-                                <li>Made with HTML and CSS</li>
-                                <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
-                                <li><a href="https://thecommunityscience.netlify.app/">Visit website</a></li>
+                                <li>Made with HTML, CSS and JavaScript - connected to WordPress API</li>
+                                <li><a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-DinaOluf">GitHub Repository</a></li>
+                                <li><a href="https://todaysfoodblog.netlify.app/">Visit website</a></li>
                             </ul>
                         </div>
                     </div>
