responsiveness and animation/javascript hover effect

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <section class="works">
                 <h2>Works</h2>
                 <div class="works-wrap">
-                    <div class="project-card">
+                    <div class="project-card" id="card-1">
                         <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website; Community Science Museum"></a>
                         <div class="card-text">
                             <h3>Community Science Museum</h3>
-                            <p>A website for a science museum to encourage young people and families to visit, and to see what events are happening.</p>
+                            <p>A website for a science museum to encourage young people and families to visit.</p>
                             <ul>
                                 <li>Made with HTML and CSS</li>
                                 <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
@@ -46,7 +46,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card" id="card-2">
                         <a href="https://dina-school.netlify.app/"><img src="./images/game-hub.jpg" alt="Screenshot of the website; Game Hub"></a>
                         <div class="card-text">
                             <h3>Game Hub</h3>
@@ -58,7 +58,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card" id="card-3">
                         <a href="https://todaysfoodblog.netlify.app/"><img src="./images/todays-food-blog.jpg" alt="Screenshot of the website; Today's Food Blog"></a>
                         <div class="card-text">
                             <h3>Today's Food Blog</h3>
@@ -79,5 +79,6 @@
     <footer>
         <div>© Dina Olufsen - 2022</div>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 </html>
