--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dina Olufsen's portfolio page, showcasing some of her work.">
+    <meta name="description" content="Dina Olufsen's portfolio page, showcasing some of their work. From here you can visit to see the websites and the GitHub Repository themselves.">
     <title>Portfolio: Dina Olufsen</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
