Implemented new projects and improved code

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="profile-text">
                     <h2>Dina Olufsen</h2>
                     <ul>
-                        <li>Becoming a Frontend Developer</li>
-                        <li>Loves Design</li>
+                        <li>Front-end Developer</li>
+                        <li>Loves UX and UI Design</li>
                         <li>Used to work with children</li>
                         <li>Loves to learn new stuff</li>
                     </ul>
@@ -34,39 +34,75 @@
             <section class="works">
                 <h2>Works</h2>
                 <div class="works-wrap">
-                    <div class="project-card" id="card-1">
-                        <a href="https://thecommunityscience.netlify.app/"><img src="./images/community-science-museum.jpg" alt="Screenshot of the website; Community Science Museum"></a>
+                    <div class="project-card" id="card-6">
+                        <a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”><img src="./images/holidaze.jpg" alt="Screenshot of the website; Holidaze"></a>
                         <div class="card-text">
-                            <h3>Community Science Museum</h3>
-                            <p>A website for a science museum to encourage young people and families to visit.</p>
+                            <div><h3>Holidaze</h3><span class="faded-text">(2023)</span></div>
+                            <p>An accommodation website to book venues for your holiday.</p>
                             <ul>
-                                <li>Made with HTML and CSS</li>
-                                <li><a href="https://github.com/DinaOluf/SemesterProject1">GitHub Repository</a></li>
-                                <li><a href="https://thecommunityscience.netlify.app/">Visit website</a></li>
+                                <li>Made with ReactJS, Bootstrap and Noroff API</li>
+                                <li><a href="https://github.com/DinaOluf/holidaze-project-exam2" target=”_blank”>GitHub Repository</a></li>
+                                <li><a href="https://holidazeproject.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="project-card" id="card-2">
-                        <a href="https://dina-school.netlify.app/"><img src="./images/game-hub.jpg" alt="Screenshot of the website; Game Hub"></a>
+                    <div class="project-card" id="card-5">
+                        <a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”><img src="./images/react-project.jpg" alt="Screenshot of the website; React Project"></a>
                         <div class="card-text">
-                            <h3>Game Hub</h3>
-                            <p>A gaming website for people to buy video games, sell old copies and pre-purchase upcoming games.</p>
+                            <div><h3>React project</h3><span class="faded-text">(2023)</span></div>
+                            <p>An e-commerce store built in ReactJS.</p>
                             <ul>
-                                <li>Made with HTML, CSS and JavaScript - connected to WordPress API</li>
-                                <li><a href="https://github.com/Noroff-FEU-Assignments/cross-course-project-DinaOluf">GitHub Repository</a></li>
-                                <li><a href="https://dina-school.netlify.app/">Visit website</a></li>
+                                <li>Made with ReactJS and Noroff API</li>
+                                <li><a href="https://github.com/DinaOluf/javascript-frameworks-ca" target=”_blank”>GitHub Repository</a></li>
+                                <li><a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”>Visit website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-card" id="card-4">
+                        <a href="https://dinaoluf.github.io/SemesterProject2" target=”_blank”><img src="./images/pearls.jpg" alt="Screenshot of the website; Pearls"></a>
+                        <div class="card-text">
+                            <div><h3>Pearls</h3><span class="faded-text">(2022)</span></div>
+                            <p>An auctioning website to buy and sell items.</p>
+                            <ul>
+                                <li>Made with HTML, Bootstrap, SCSS, JavaScript and Noroff API</li>
+                                <li><a href="https://github.com/DinaOluf/SemesterProject2" target=”_blank”>GitHub Repository</a></li>
+                                <li><a href="https://dinaoluf.github.io/SemesterProject2" target=”_blank”>Visit website</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="project-card" id="card-3">
-                        <a href="https://todaysfoodblog.netlify.app/"><img src="./images/todays-food-blog.jpg" alt="Screenshot of the website; Today's Food Blog"></a>
+                        <a href="https://todaysfoodblog.netlify.app/" target=”_blank”><img src="./images/todays-food-blog.jpg" alt="Screenshot of the website; Today's Food Blog"></a>
                         <div class="card-text">
-                            <h3>Today's Food Blog</h3>
-                            <p>A food blog for a content creator to post about their food making and experiences with food.</p>
+                            <div><h3>Today's Food Blog</h3><span class="faded-text">(2022)</span></div>
+                            <p>A food blog for a content creator.</p>
                             <ul>
-                                <li>Made with HTML, CSS and JavaScript - connected to WordPress API</li>
-                                <li><a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-DinaOluf">GitHub Repository</a></li>
-                                <li><a href="https://todaysfoodblog.netlify.app/">Visit website</a></li>
+                                <li>Made with HTML, CSS, JavaScript and WordPress REST API</li>
+                                <li><a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-DinaOluf" target=”_blank”>GitHub Repository</a></li>
+                                <li><a href="https://todaysfoodblog.netlify.app/" target=”_blank”>Visit website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-card" id="card-2">
+                        <a href="https://dina-school.netlify.app/" target=”_blank”><img src="./images/game-hub.jpg" alt="Screenshot of the website; Game Hub"></a>
+                        <div class="card-text">
+                            <div><h3>Game Hub</h3><span class="faded-text">(2022)</span></div>
+                            <p>A website for people to buy and sell video games.</p>
+                            <ul>
+                                <li>Made with HTML, CSS, JavaScript and WordPress REST API</li>
+                                <li><a href="https://github.com/Noroff-FEU-Assignments/cross-course-project-DinaOluf" target=”_blank”>GitHub Repository</a></li>
+                                <li><a href="https://dina-school.netlify.app/">Visit website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-card" id="card-1">
+                        <a href="https://thecommunityscience.netlify.app/" target=”_blank”><img src="./images/community-science-museum.jpg" alt="Screenshot of the website; Community Science Museum"></a>
+                        <div class="card-text">
+                            <div><h3>Community Science Museum</h3><span class="faded-text">(2021)</span></div>
+                            <p>A science museum website for young people and families.</p>
+                            <ul>
+                                <li>Made with HTML and CSS</li>
+                                <li><a href="https://github.com/DinaOluf/SemesterProject1" target=”_blank”>GitHub Repository</a></li>
+                                <li><a href="https://thecommunityscience.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
                         </div>
                     </div>
@@ -77,7 +113,7 @@
         </div>
     </main>
     <footer>
-        <div>© Dina Olufsen - 2022</div>
+        <div>© Dina Olufsen - 2023</div>
     </footer>
     <script src="./js/index.js"></script>
 </body>
