--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div><h3>React project</h3><span class="faded-text">(2023)</span></div>
                             <p>An e-commerce store built in ReactJS.</p>
                             <ul>
-                                <li>Made with ReactJS and Noroff API</li>
+                                <li>Made with ReactJS, SCSS and Noroff API</li>
                                 <li><a href="https://github.com/DinaOluf/javascript-frameworks-ca" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
