--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </main>
     <footer>
-        <div>© Dina Olufsen - 2023</div>
+        <div>© Dina Olufsen 2022-</div>
     </footer>
     <script src="./js/index.js"></script>
 </body>
