Minor change to alt text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Dina Olufsen's Portfolio</h1>
             <section class="profile">
                 <div class="img-container">
-                    <img src="/images/portrait.jpg">
+                    <img src="/images/portrait.jpg" alt="Portrait of Dina Olufsen">
                 </div>
                 <div class="profile-text">
                     <h2>Dina Olufsen</h2>
@@ -27,7 +27,7 @@
                     </ul>
                     <div>
                         <span>Contact me: </span>
-                        <a href="https://www.linkedin.com/in/dina-olufsen-42922721a/"><img src="/images/linkedin-logo.png" alt="Portrait of Dina Olufsen."></a>
+                        <a href="https://www.linkedin.com/in/dina-olufsen-42922721a/"><img src="/images/linkedin-logo.png" alt="linkedin logo"></a>
                     </div>
                 </div>
             </section>
