functioning game without scoring

--- a/hop.html
+++ b/hop.html
@@ -13,12 +13,22 @@
     <header></header>
     <main>
         <div class="content">
-            <div class="hop-game">
+            <div id="hopGame">
                 <div id="hopper">
                     <img src="./images/hop/hopper1.png" alt="A running dog">
                 </div>
-                <div id="obstacle"></div>
-                <div id="ground"></div>
+                <div id="rock1"></div>
+                <div id="rock2"></div>
+                <div id="rock3"></div>
+                <div class="ground"></div>
+                <div id="overlay" class="show-overlay">
+                    Press any key to start
+                </div>
+                <div id="score">0</div>
+                <div class="hi">
+                    Hi-score:
+                    <div id="hiScore">0</div>
+                </div>
             </div>
             <div class="circle circle-1"><div></div></div>
             <div class="circle circle-2"><div></div></div>
