Finished Hop Game

--- a/hop.html
+++ b/hop.html
@@ -15,7 +15,7 @@
         <div class="content">
             <div id="hopGame">
                 <div id="hopper">
-                    <img src="./images/hop/hopper1.png" alt="A running dog">
+                    <img id="hopperImg" src="./images/hop/hopper1.png" alt="A running dog">
                 </div>
                 <div id="rock1"></div>
                 <div id="rock2"></div>
