hop game teaser implemented

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     </div>
                 </div>
             </section>
+            <a href="hop.html" id="hopTeaser"><img src="./images/hop/hopper-peek.png" alt="a dog peeking from the corner of the page"></a>
             <div class="circle circle-1"><div></div></div>
             <div class="circle circle-2"><div></div></div>
         </div>
