--- a/hop.html
+++ b/hop.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="./css/hop.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="index.html" class="return">⮜ Back</a>
+    </header>
     <main>
         <div class="content">
             <div id="hopGame">
