--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>Works</h2>
                 <div class="works-wrap">
                     <div class="project-card" id="card-6">
-                        <a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”><img src="./images/holidaze.jpg" alt="Screenshot of the website; Holidaze"></a>
+                        <a href="https://holidazeproject.netlify.app/" target=”_blank”><img src="./images/holidaze.jpg" alt="Screenshot of the website; Holidaze"></a>
                         <div class="card-text">
                             <div><h3>Holidaze</h3><span class="faded-text">(2023)</span></div>
                             <p>An accommodation website to book venues for your holiday.</p>
