Restricted game page for device sizes

--- a/hop.html
+++ b/hop.html
@@ -32,6 +32,7 @@
                     <div id="hiScore">0</div>
                 </div>
             </div>
+            <div class="error">Sorry, this game only works for devices wider than 950px.</div>
             <div class="circle circle-1"><div></div></div>
             <div class="circle circle-2"><div></div></div>
         </div>
