Added overlooked target="_blank"

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <ul>
                                 <li>Made with HTML, CSS, JavaScript and WordPress REST API</li>
                                 <li><a href="https://github.com/Noroff-FEU-Assignments/cross-course-project-DinaOluf" target=”_blank”>GitHub Repository</a></li>
-                                <li><a href="https://dina-school.netlify.app/">Visit website</a></li>
+                                <li><a href="https://dina-school.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
                         </div>
                     </div>
