Minor tweak to link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </ul>
                     <div>
                         <span>Contact me: </span>
-                        <a href="https://www.linkedin.com/in/dina-olufsen-42922721a/"><img src="/images/linkedin-logo.png" alt="linkedin logo"></a>
+                        <a href="https://www.linkedin.com/in/dina-olufsen-42922721a/" target=”_blank”><img src="/images/linkedin-logo.png" alt="linkedin logo"></a>
                     </div>
                 </div>
             </section>
