tweaks to presentation
Added icons and tweaked css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Dina Olufsen's Portfolio</h1>
             <section class="profile">
                 <div class="img-container">
-                    <img src="/images/portrait.jpg" alt="Portrait of Dina Olufsen">
+                    <img src="/images/happyDina.jpg" alt="Portrait of Dina Olufsen">
                 </div>
                 <div class="profile-text">
                     <h2>Dina Olufsen</h2>
@@ -40,7 +40,10 @@
                             <div><h3>Holidaze</h3><span class="faded-text">(2023)</span></div>
                             <p>An accommodation website to book venues for your holiday.</p>
                             <ul>
-                                <li>Made with ReactJS, Bootstrap and Noroff API</li>
+                                <li>Made with 
+                                    <span class="small-icons mini-react"></span>React, 
+                                    <span class="small-icons mini-bs"></span>Bootstrap and API
+                                </li>
                                 <li><a href="https://github.com/DinaOluf/holidaze-project-exam2" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://holidazeproject.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
@@ -52,7 +55,10 @@
                             <div><h3>React project</h3><span class="faded-text">(2023)</span></div>
                             <p>An e-commerce store built in ReactJS.</p>
                             <ul>
-                                <li>Made with ReactJS, SCSS and Noroff API</li>
+                                <li>Made with 
+                                    <span class="small-icons mini-react"></span>React, 
+                                    <span class="small-icons mini-sass"></span>SCSS and API
+                                </li>
                                 <li><a href="https://github.com/DinaOluf/javascript-frameworks-ca" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
@@ -64,7 +70,12 @@
                             <div><h3>Pearls</h3><span class="faded-text">(2022)</span></div>
                             <p>An auctioning website to buy and sell items.</p>
                             <ul>
-                                <li>Made with HTML, Bootstrap, SCSS, JavaScript and Noroff API</li>
+                                <li>Made with 
+                                    <span class="small-icons mini-html"></span>HTML, 
+                                    <span class="small-icons mini-bs"></span>Bootstrap, 
+                                    <span class="small-icons mini-sass"></span>SCSS, 
+                                    <span class="small-icons mini-js"></span>JavaScript and API
+                                </li>
                                 <li><a href="https://github.com/DinaOluf/SemesterProject2" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://dinaoluf.github.io/SemesterProject2" target=”_blank”>Visit website</a></li>
                             </ul>
@@ -76,7 +87,12 @@
                             <div><h3>Today's Food Blog</h3><span class="faded-text">(2022)</span></div>
                             <p>A food blog for a content creator.</p>
                             <ul>
-                                <li>Made with HTML, CSS, JavaScript and WordPress REST API</li>
+                                <li>Made with 
+                                    <span class="small-icons mini-html"></span>HTML, 
+                                    <span class="small-icons mini-css"></span>CSS, 
+                                    <span class="small-icons mini-js"></span>JavaScript and 
+                                    <span class="small-icons mini-wp"></span>WordPress REST API
+                                </li>
                                 <li><a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-DinaOluf" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://todaysfoodblog.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
@@ -88,7 +104,12 @@
                             <div><h3>Game Hub</h3><span class="faded-text">(2022)</span></div>
                             <p>A website for people to buy and sell video games.</p>
                             <ul>
-                                <li>Made with HTML, CSS, JavaScript and WordPress REST API</li>
+                                <li>Made with 
+                                    <span class="small-icons mini-html"></span>HTML, 
+                                    <span class="small-icons mini-css"></span>CSS, 
+                                    <span class="small-icons mini-js"></span>JavaScript and 
+                                    <span class="small-icons mini-wp"></span>WordPress REST API
+                                </li>
                                 <li><a href="https://github.com/Noroff-FEU-Assignments/cross-course-project-DinaOluf" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://dina-school.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
@@ -100,7 +121,10 @@
                             <div><h3>Community Science Museum</h3><span class="faded-text">(2021)</span></div>
                             <p>A science museum website for young people and families.</p>
                             <ul>
-                                <li>Made with HTML and CSS</li>
+                                <li>Made with 
+                                    <span class="small-icons mini-html"></span>HTML and 
+                                    <span class="small-icons mini-css"></span>CSS
+                                </li>
                                 <li><a href="https://github.com/DinaOluf/SemesterProject1" target=”_blank”>GitHub Repository</a></li>
                                 <li><a href="https://thecommunityscience.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
