--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="project-card" id="card-5">
+                    <!-- <div class="project-card" id="card-5">
                         <a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”><img src="./images/react-project.jpg" alt="Screenshot of the website; React Project"></a>
                         <div class="card-text">
                             <div><h3>React project</h3><span class="faded-text">(2023)</span></div>
@@ -63,7 +63,7 @@
                                 <li><a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="project-card" id="card-4">
                         <a href="https://dinaoluf.github.io/SemesterProject2" target=”_blank”><img src="./images/pearls.jpg" alt="Screenshot of the website; Pearls"></a>
                         <div class="card-text">
