--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
     </main>
     <footer>
-        <div>© Dina Olufsen 2022-</div>
+        <div>© Dina Olufsen 2023</div>
     </footer>
     <script src="./js/index.js"></script>
 </body>
