--- a/hop.html
+++ b/hop.html
@@ -38,7 +38,7 @@
         </div>
     </main>
     <footer>
-        <div>© Dina Olufsen 2022-</div>
+        <div>© Dina Olufsen 2023</div>
     </footer>
     <script src="./js/hop.js"></script>
 </body>
