--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- <div class="project-card" id="card-5">
-                        <a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”><img src="./images/react-project.jpg" alt="Screenshot of the website; React Project"></a>
+                    <div class="project-card" id="card-5">
+                        <a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”>
+                            <div class="improving" title="Making improvements" aria-label="Making improvements"></div>
+                            <img src="./images/react-project.jpg" alt="Screenshot of the website; React Project">
+                        </a>
                         <div class="card-text">
                             <div><h3>React project</h3><span class="faded-text">(2023)</span></div>
                             <p>An e-commerce store built in ReactJS.</p>
@@ -63,7 +66,7 @@
                                 <li><a href="https://javascriptframeworks-react.netlify.app/" target=”_blank”>Visit website</a></li>
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="project-card" id="card-4">
                         <a href="https://dinaoluf.github.io/SemesterProject2" target=”_blank”><img src="./images/pearls.jpg" alt="Screenshot of the website; Pearls"></a>
                         <div class="card-text">
